fix menu spacing

--- a/kunquat.css
+++ b/kunquat.css
@@ -27,6 +27,7 @@ td *
 iframe.menu
 {
 	width: 100%;
+	height: 6em;
 }
 .warning
 {
